Update create, edit, delete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
         <item>C#</item>
         <item>HTML</item>
         <item>Go</item>
+        <item>Android</item>
     </string-array>
 </resources>
